# Gestor_de_nfs

./: .gitignore  pyproject.toml  requirements.txt  run.py
nf_manager/: admin.py  choices.py  models.py  serializers.py  services.py  validators.py  views.py
nf_manager/migrations/: 0001_initial.py  0002_alter_nf_descricao_alter_nf_valor.py  0003_remove_nf_nome_nf_bairro_nf_cep_nf_cidade_nf_cnpj_and_more.py  0004_alter_nf_bairro_alter_nf_cep_alter_nf_cidade_and_more.py  0005_alter_nf_cep_alter_nf_cnpj_alter_nf_email_contato_and_more.py  0006_nf_codigo_verificacao_nf_data_emissao_nf_numero_nfse.py
setup/: settings.py
setup/nf_manager/: admin.py  apps.py
