[project]
name = "emissornotas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "attrs==26.1.0",
    "brutils==2.5.0",
    "certifi==2026.6.17",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "coverage==7.15.0",
    "cryptography==49.0.0",
    "Django==6.0.6",
    "docopt==0.6.2",
    "dotenv==0.9.9",
    "holidays==0.98",
    "idna==3.18",
    "isodate==0.7.2",
    "lxml==6.1.1",
    "num2words==0.5.14",
    "platformdirs==4.10.0",
    "psycopg2-binary==2.9.12",
    "pycparser==3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "requests-file==3.0.1",
    "requests-toolbelt==1.0.0",
    "signxml==5.1.0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "zeep==4.3.3",
    "openpyxl>=3.1",
]
